--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -22,8 +22,8 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/lab": "^7.0.0",
     "@mui/material": "^7.3.4",
-    "@mui/x-charts": "^8.16.0",
-    "@mui/x-date-pickers": "^8.16.0",
+    "@mui/x-charts": "8.11.3",
+    "@mui/x-date-pickers": "8.11.3",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
     "camelcase-keys": "^10.0.0",
