Extend license generation to take "validFrom" argument

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -381,7 +381,7 @@ jobs:
 
       - name: Generate license for E2E Tests
         run: |
-          python Scripts/generate_license.py private_key.pem license.json "1886" "Lighthouse CI" "ci@lighthouse.test" "Lighthouse Test Organization" "$(date -d '+45 days' '+%Y-%m-%d')"
+          python Scripts/generate_license.py private_key.pem license.json "1886" "Lighthouse CI" "ci@lighthouse.test" "Lighthouse Test Organization" "$(date -d '+45 days' '+%Y-%m-%d')" "$(date -d '-3 days' '+%Y-%m-%d')"
 
       - name: Wait for Lighthouse to start
         run: |
@@ -531,7 +531,7 @@ jobs:
 
       - name: Generate license for E2E Tests
         run: |
-          python Scripts/generate_license.py private_key.pem license.json "1886" "Lighthouse CI" "ci@lighthouse.test" "Lighthouse Test Organization" "$(date -d '+45 days' '+%Y-%m-%d')"
+          python Scripts/generate_license.py private_key.pem license.json "1886" "Lighthouse CI" "ci@lighthouse.test" "Lighthouse Test Organization" "$(date -d '+45 days' '+%Y-%m-%d')" "$(date -d '-3 days' '+%Y-%m-%d')"
 
       - name: Wait for Lighthouse to start
         run: |
