--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -23,6 +23,7 @@
     "@mui/lab": "^7.0.0",
     "@mui/material": "^7.3.5",
     "@mui/x-charts": "8.11.3",
+    "@mui/x-data-grid": "^8.17.0",
     "@mui/x-date-pickers": "8.11.3",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
@@ -53,7 +54,8 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/coverage-v8": "^4.0.8",
     "cross-env": "^10.1.0",
-    "jsdom": "^27.2.0",
+    "jsdom": "^25.0.1",
+    "parse5": "^7.2.1",
     "typescript": "^5.9.3",
     "vite": "^7.2.2",
     "vite-plugin-pwa": "^1.1.0",
