--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
     "build-docker": "tsc -b && vite build --outDir ./dist",
     "build-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
-    "prebuild": "npx @biomejs/biome check --write ./src",
+    "prebuild": "pnpm dlx @biomejs/biome check --write ./src",
     "preview": "vite preview",
     "test": "vitest --reporter=default",
     "sonarreport": "vitest run --coverage"
