--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/lab": "^7.0.0",
     "@mui/material": "^7.3.5",
+    "@mui/system": "^7.3.5",
     "@mui/x-charts": "8.11.3",
     "@mui/x-data-grid": "^8.20.0",
     "@mui/x-date-pickers": "8.11.3",
@@ -53,6 +54,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/coverage-v8": "^4.0.14",
+    "@vitest/spy": "^4.0.14",
     "cross-env": "^10.1.0",
     "jsdom": "^27.2.0",
     "parse5": "^8.0.0",
