Extended ci workflow with windows signing
- add docker file that registers as GH Action runner and can sign
- signing happens locally through yubikey

--- a/.gitignore
+++ b/.gitignore
@@ -414,3 +414,4 @@ examples/postgres/data/*
 !/examples/postgres/certs/LighthouseCert.pfx
 .DS_Store
 Lighthouse.EndToEndTests/temp-downloads/*
+tools/codesign/.secure_env/*
