--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -325,11 +325,6 @@ jobs:
         run: dotnet publish -c Release -r win-x64 --self-contained -p:PublishSingleFile=true -p:Version=${{ needs.tag.outputs.fileversion }} -o ./publish/win-x64
         working-directory: ./Lighthouse.Backend/Lighthouse.Backend
 
-      # TODO: Add Windows Authenticode code signing here when certificates are available
-      # Steps needed:
-      # 1. Import code signing certificate from secrets
-      # 2. Use signtool or AzureSignTool to sign Lighthouse.exe
-      # Reference: https://docs.microsoft.com/en-us/windows/win32/seccrypto/signtool
 
       - name: Remove development settings from win-x64
         run: rm -f ./Lighthouse.Backend/Lighthouse.Backend/publish/win-x64/appsettings.Development.json
@@ -764,14 +759,54 @@ jobs:
           cat ./linux-x64/lighthouse.log
           rm -rf ./linux-x64/logs
         working-directory: ./Lighthouse
+
+  codesign-windows:
+    name: Sign Windows Binaries
+    runs-on: [self-hosted, codesign]
+    timeout-minutes: 5
+    needs:
+      - tag
+      - docker
+      - verifysqlite
+      - verifypostgres
+
+    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
+
+    environment:
+      name: Release
+
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: Lighthouse ${{ needs.tag.outputs.version }}
+          path: ./artifacts
+
+      - name: Sign Windows executables
+        run: |
+          sign.sh ./artifacts/win-x64 "Lighthouse.exe"
+        env:
+          YUBIKEY_PIN: ${{ secrets.YUBIKEY_PIN }}
+
+      - name: Verify signature
+        run: |
+          verify.sh ./artifacts/win-x64/Lighthouse.exe
+
+      - name: Delete unsigned artifact
+        uses: geekyeggo/delete-artifact@v5
+        with:
+          name: Lighthouse ${{ needs.tag.outputs.version }}
+
+      - name: Upload signed artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Lighthouse ${{ needs.tag.outputs.version }}
+          path: ./artifacts
       
   release:
     runs-on: ubuntu-latest
     needs:
     - tag
-    - docker
-    - verifysqlite
-    - verifypostgres
+    - codesign-windows
 
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
