--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -772,57 +772,59 @@ jobs:
           rm -rf ./linux-x64/logs
         working-directory: ./Lighthouse
 
-  codesign-windows:
-    name: Sign Windows Binaries
-    runs-on: [self-hosted, codesign]
-    timeout-minutes: 5
-    needs:
-      - tag
-      - docker
-      - verifysqlite
-      - verifypostgres
-
-    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
-
-    environment:
-      name: Release
-
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
-          path: ./artifacts/win-x64
-
-      - name: Sign Windows executables
-        run: |
-          # Sign both EXE and DLL files in a single invocation
-          sign.sh ./artifacts/win-x64 "Lighthouse*.exe" "Lighthouse*.dll"
-        env:
-          YUBIKEY_PIN: ${{ secrets.YUBIKEY_PIN }}
-
-      # Self-signed cert will fail verification
-      # - name: Verify signatures
-      #  continue-on-error: true 
-      #  run: |
-      #    # Verify EXE and DLL files in a single invocation
-      #    verify.sh ./artifacts/win-x64 "Lighthouse*.exe" "Lighthouse*.dll"
-
-      - name: Delete unsigned windows artifact
-        uses: geekyeggo/delete-artifact@v5
-        with:
-          name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
-
-      - name: Upload signed windows artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
-          path: ./artifacts/win-x64
+  # Disabled codesign-windows job until a signing certificate is available
+  #  codesign-windows:
+  #    name: Sign Windows Binaries
+  #    runs-on: [self-hosted, codesign]
+  #    timeout-minutes: 5
+  #    needs:
+  #      - tag
+  #      - docker
+  #      - verifysqlite
+  #      - verifypostgres
+  #
+  #    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
+  #
+  #    environment:
+  #      name: Release
+  #
+  #    steps:
+  #      - uses: actions/download-artifact@v4
+  #        with:
+  #          name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
+  #          path: ./artifacts/win-x64
+  #
+  #      - name: Sign Windows executables
+  #        run: |
+  #          # Sign both EXE and DLL files in a single invocation
+  #          sign.sh ./artifacts/win-x64 "Lighthouse*.exe" "Lighthouse*.dll"
+  #        env:
+  #          YUBIKEY_PIN: ${{ secrets.YUBIKEY_PIN }}
+  #
+  #      - name: Verify signatures
+  #        continue-on-error: true 
+  #        run: |
+  #          # Verify EXE and DLL files in a single invocation
+  #          verify.sh ./artifacts/win-x64 "Lighthouse*.exe" "Lighthouse*.dll"
+  #
+  #      - name: Delete unsigned windows artifact
+  #        uses: geekyeggo/delete-artifact@v5
+  #        with:
+  #          name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
+  #
+  #      - name: Upload signed windows artifact
+  #        uses: actions/upload-artifact@v4
+  #        with:
+  #          name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
+  #          path: ./artifacts/win-x64
       
   release:
     runs-on: ubuntu-latest
     needs:
     - tag
-    - codesign-windows
+    - docker
+    - verifysqlite
+    - verifypostgres
 
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
